Work in Travel Portal API

--- a/travel_control/html/css/travel_control.css
+++ b/travel_control/html/css/travel_control.css
@@ -13,6 +13,7 @@
     --travel-t2-color:          rgb(204, 51, 255);
     --travel-t3-color:          rgb(255, 51, 153);
     --refresh-color:            #2ecc71;
+    --error-color:              rgb(255, 0, 0)
 }
 
 * {
@@ -185,5 +186,8 @@ html, body {
     background: var(--refresh-color);
 }
 
+.error {
+    color: var(--error-color);
+}
 
 
